# kild

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  PR_MERGE_ANALYSIS.md  PR_MERGE_COMPLETION.md  README.md  REGRESSION_TESTING.md  ROADMAP-DISCUSSION.md
.agents/plans/: bootstrap-vertical-slice-architecture.md
.archon/artifacts/plans/: gpui-native-terminal-ui.plan.md
.archon/artifacts/reports/: cleanup-tracking-system-report.md  config-track-report.md  include-patterns-override-gitignore-report.md  pid-tracking-report.md  port-allocation-report.md  restart-command-report.md
.claude/PRPs/branding/: BRAND.md  VISION.md
.claude/PRPs/issues/: issue-102.md  issue-186.md  issue-214.md  issue-302.md  issue-332.md  issue-95.md
.claude/PRPs/plans/: peek-native-app-inspector.plan.md  sidebar-layout.plan.md
.claude/PRPs/prds/: cli-core-features.prd.md  gpui-native-terminal-ui.prd.md
.claude/PRPs/reports/: cli-1.3-code-command-report.md  cli-2.1-focus-command-report.md  cli-2.2-diff-command-report.md  cli-2.4-destroy-all-report.md  flip-logging-default-verbose-flag-report.md  gpui-phase-1-scaffolding-report.md  gui-7.5-notes-git-status-report.md  gui-7.7-quick-actions-report.md  issue-124-phase5-sessionstore-report.md  issue-124-phase6-appstate-facade-report.md  peek-diff-output-report.md  phase-8-projects-report.md  phase-9.7-git-diff-stats-report.md  selection-and-detail-panel-report.md  sessions-operations-split-report.md  sidebar-layout-report.md  standardize-structured-logging-report.md
.claude/agents/: gpui-researcher.md
.claude/commands/: e2e.md  save-tasks.md
.claude/skills/kild/: SKILL.md
.claude/skills/kild-peek/: SKILL.md
.claude/skills/shards/: SKILL.md
.claude/skills/worktree-manager/: SKILL.md  config.json
.kild/: config.example.toml  config.toml
.kiro/agents/: code-reviewer.json  comment-analyzer.json  error-hunter.json  test-analyzer.json  type-analyzer.json
.kiro/devlog/: devlog.md
.kiro/prompts/: code-review.md  commit.md
.kiro/steering/: ai-instruction.md  product.md  progress.md  structure.md  tech.md
.shards/: config.toml
crates/kild/: Cargo.toml
crates/kild-core/: Cargo.toml
crates/kild-core/src/: escape.rs  lib.rs
crates/kild-core/src/agents/: errors.rs  mod.rs  registry.rs  traits.rs  types.rs
crates/kild-core/src/agents/backends/: aether.rs  claude.rs  codex.rs  gemini.rs  kiro.rs  mod.rs
crates/kild-core/src/cleanup/: errors.rs  handler.rs  mod.rs  operations.rs  types.rs
crates/kild-core/src/config/: defaults.rs  loading.rs  mod.rs  types.rs  validation.rs
crates/kild-core/src/daemon/: client.rs
crates/kild-core/src/errors/: mod.rs
crates/kild-core/src/files/: errors.rs  handler.rs  mod.rs  operations.rs  types.rs
crates/kild-core/src/git/: cli.rs  errors.rs  handler.rs  health.rs  mod.rs  operations.rs  types.rs
crates/kild-core/src/health/: errors.rs  handler.rs  mod.rs  operations.rs  storage.rs  types.rs
crates/kild-core/src/logging/: mod.rs
crates/kild-core/src/notify/: mod.rs
crates/kild-core/src/process/: errors.rs  mod.rs  operations.rs  pid_file.rs  types.rs
crates/kild-core/src/projects/: errors.rs  manager.rs  mod.rs  persistence.rs  types.rs
crates/kild-core/src/sessions/: agent_status.rs  complete.rs  create.rs  daemon_helpers.rs  destroy.rs  errors.rs  handler.rs  info.rs  list.rs  mod.rs  open.rs  operations.rs  persistence.rs  ports.rs  stop.rs  types.rs  validation.rs
crates/kild-core/src/state/: dispatch.rs  errors.rs  events.rs  store.rs  types.rs
crates/kild-core/src/terminal/: errors.rs  handler.rs  mod.rs  operations.rs  registry.rs  traits.rs  types.rs
crates/kild-core/src/terminal/backends/: ghostty.rs  iterm.rs  mod.rs  terminal_app.rs
crates/kild-core/src/terminal/common/: applescript.rs  detection.rs  escape.rs  mod.rs
crates/kild-core/src/terminal/native/: macos.rs  mod.rs  types.rs
crates/kild-daemon/tests/: integration.rs
crates/kild-tmux-shim/: Cargo.toml
crates/kild-tmux-shim/src/: commands.rs  errors.rs  ipc.rs  main.rs  parser.rs  state.rs
crates/kild-tmux-shim/test-scripts/: README.md  diagnose-shim.sh  run-interactive-e2e.sh  run-simulation.sh  verify-shim-env.sh
crates/kild-tmux-shim/tests/fixtures/: claude-code-spawn-simulation.sh
crates/kild-ui/: Cargo.toml
crates/kild-ui/src/: actions.rs  main.rs  projects.rs  refresh.rs  state.rs
crates/kild-ui/src/state/: app_state.rs  dialog.rs  errors.rs  mod.rs  selection.rs  sessions.rs
crates/kild-ui/src/terminal/: errors.rs  state.rs  terminal_element.rs  terminal_view.rs
crates/kild-ui/src/views/: confirm_dialog.rs  create_dialog.rs  detail_panel.rs  kild_list.rs  main_view.rs  mod.rs  sidebar.rs
crates/kild/src/: app.rs  commands.rs  main.rs  table.rs
crates/kild/src/commands/: agent_status.rs  attach.rs  completions.rs  mod.rs  overlaps.rs  pr.rs  stats.rs
crates/kild/tests/: cli_json_output.rs  cli_output.rs  config_warning.rs
crates/shards/: Cargo.toml
crates/shards-ui/: Cargo.toml
crates/shards-ui/src/: actions.rs  main.rs  projects.rs  state.rs
crates/shards-ui/src/views/: add_project_dialog.rs  confirm_dialog.rs  create_dialog.rs  main_view.rs  mod.rs  project_selector.rs  shard_list.rs
crates/shards/src/: app.rs  commands.rs
crates/shards/tests/: cli_output.rs  config_warning.rs
docs/: PROMPT_PIPING_PLAN.md
docs/dx/: logging-and-labels.md
scripts/: RALPH_LOOP.md  ralph-loop.sh  regression-test.sh  start-ralph.sh
shards/: config.toml
src/: lib.rs  main.rs
src/cleanup/: errors.rs  handler.rs  mod.rs  operations.rs  types.rs
src/cli/: app.rs  commands.rs  mod.rs  table.rs
src/core/: config.rs  errors.rs  events.rs  logging.rs  mod.rs
src/files/: errors.rs  handler.rs  operations.rs  types.rs
src/git/: errors.rs  handler.rs  operations.rs  types.rs
src/health/: handler.rs  mod.rs  operations.rs  storage.rs
src/process/: errors.rs  mod.rs  operations.rs  pid_file.rs  types.rs
src/sessions/: errors.rs  handler.rs  operations.rs  types.rs
src/terminal/: errors.rs  handler.rs  operations.rs  types.rs
(+92 files in other folders)
