[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/Wirasm/SHARDS"

[workspace.dependencies]
# Core dependencies (shared across crates)
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.37.2"
toml = "0.8"
git2 = "0.18"
ignore = "0.4"
glob = "0.3"
walkdir = "2"
tempfile = "3"
which = "7"
uuid = { version = "1", features = ["v4"] }

# CLI-only dependencies
clap = { version = "4.0", features = ["derive"] }

# Internal workspace dependencies
shards-core = { path = "crates/shards-core" }

# UI dependencies
gpui = "0.2"
# Pin core-text to 21.0.0 to avoid core_graphics version conflict.
# core-text 21.1.0 pulls in core-graphics 0.25.0, but gpui's font-kit dependency
# requires core-graphics 0.24.0, causing type mismatches at compile time.
core-text = "=21.0.0"
