[package]
name = "kild-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for KILD - parallel AI agent worktree management"

[dependencies]
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dirs.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
sysinfo.workspace = true
toml.workspace = true
git2.workspace = true
ignore.workspace = true
glob.workspace = true
walkdir.workspace = true
tempfile.workspace = true
uuid.workspace = true
which.workspace = true
