[package]
name = "kild-tmux-shim"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kild-tmux-shim"
path = "src/main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dirs = { workspace = true }
base64 = { workspace = true }
nix = { workspace = true, features = ["fs"] }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
