[package]
name = "shards-ui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GUI for Shards - visual shard management dashboard"

[[bin]]
name = "shards-ui"
path = "src/main.rs"

[dependencies]
shards-core.workspace = true
gpui.workspace = true
core-text.workspace = true  # Pin to fix gpui dependency conflict
tracing.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true
