[package]
name = "shards"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for Shards - manage parallel AI development agents"

[[bin]]
name = "shards"
path = "src/main.rs"

[dependencies]
shards-core.workspace = true
clap.workspace = true
tracing.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile.workspace = true
